fix search result width on mobile

--- a/css/bdw2pointoh.css
+++ b/css/bdw2pointoh.css
@@ -1637,3 +1637,10 @@ form#searchuserbyloc-form fieldset {
   clear: both;
 }
 
+/**********
+ * Search REsults Page
+ ******/
+
+#google-cse-results iframe {
+  width: auto;
+}
